--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/core": "~8.2.9",
     "@angular/fire": "^6.0.0",
     "@angular/forms": "~8.2.9",
+    "@angular/localize": "^9.1.12",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "bootstrap": "^4.5.2",
     "firebase": "^7.14.3",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
