--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # dependencies
 /node_modules
 
+# Environment
+/src/environments
+
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
@@ -44,6 +47,3 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-
-# Environment
- src/environments
