Implemented the FirebaseAuthenticator service.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.2",
     "firebase": "^7.19.1",
+    "firebase-tools": "^8.11.2",
+    "g": "^2.0.1",
     "ng-inline-svg": "^11.0.0",
     "rxjs": "^6.6.2",
     "tslib": "^2.0.0",
