--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "~10.0.14",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.2",
-    "firebase": "^7.19.1",
+    "firebase": "^7.22.1",
     "ng-inline-svg": "^11.0.0",
     "rxjs": "^6.6.2",
     "tslib": "^2.0.0",
@@ -34,6 +34,7 @@
     "@angular/cli": "~10.0.8",
     "@angular/compiler-cli": "~10.0.14",
     "@angular/language-service": "~10.0.14",
+    "@firebase/testing": "^0.20.11",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -49,5 +50,17 @@
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.7"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 8.3.7.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/g-rar/toolForLOLStats.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/g-rar/toolForLOLStats/issues"
+  },
+  "homepage": "https://github.com/g-rar/toolForLOLStats#readme"
 }
